video-alignment and mute issue solved

--- a/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
+++ b/web/src/app/components/admin-dashboard/components/patient-detail-page/patient-detail-page.component.scss
@@ -3387,8 +3387,7 @@ ned-dialog {
 }
 .remotevideo {
   width: 100%;
-  height: 100%;
-
+  height: 500px;
   z-index: 100;
 }
 
@@ -3424,16 +3423,17 @@ ned-dialog {
   height: 100%;
   background-color: #ffffff;
 }
+
 .myvideoContainer {
-  height: 100%;
+  display: inline-block;
   background-color: #8226df;
   padding: 0.8rem;
-
   border-radius: 0.8rem;
   min-width: 500px;
-  max-height: 500px;
+  min-height: 90vh;
   min-width: 60vw;
-  max-height: 90vh;
+  max-height: auto;
+  //max-height: 90vh;
   z-index: 1000;
 
 }
@@ -3453,13 +3453,13 @@ ned-dialog {
 }
 
 
-video {
-  width: {
-    ideal: 195;
-    min: 1600;
-    max: 3200;
-  }
-}
+// video {
+//   width: {
+//     ideal: 195;
+//     min: 1600;
+//     max: 3200;
+//   }
+// }
 .videosubPanel {
   width: fit-content;
   height: 100%;
@@ -3716,4 +3716,16 @@ li + li {
   border: 2px solid #3bcbc4;
   font-size: 0.75rem;
   font-family: "Rubik";
+}
+.remote-video-styled {
+  object-fit: cover;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.participant:not(.local) {
+  overflow: hidden;
+  border-radius: 8px;
+  border: 1px solid #e0e0e0;
+  background-color: #f5f5f5;
 }
